# soracom2s3

./: .gitignore  CMakeLists.txt  LICENSE  README.md  every_save.sh  mail_report.sh  report.sh  save_lora.sh
scripts/: add_data_str_parameter.sh  register_tag.sh  report.sh
src/: data_converter.cpp
